# personna-ai

./: .gitignore  README.md  main.py  memory.py  persona.json  pyproject.toml  voice.py
