[project]
name = "personna-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "elevenlabs>=2.58.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
